--- a/package.json
+++ b/package.json
@@ -1,15 +1,60 @@
 {
-  "name": "sangam",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.29.4",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/lab": "5.0.0-alpha.120",
+    "@mui/material": "^5.11.9",
+    "@mui/x-date-pickers": "^6.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-material-ui-carousel": "3.4.2",
+    "react-router-dom": "^6.8.1",
+    "react-router-hash-link": "2.4.3",
+    "react-bootstrap": "^2.7.2",
+    "react-phone-number-input": "3.2.19",
+    "bootstrap":"^5.2.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.3.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@faker-js/faker": "^7.6.0",
+    "@iconify/react": "^4.1.0",
+    "apexcharts": "^3.37.0",
+    "change-case": "^4.1.2",
+    "date-fns": "^2.29.3",
+    "history": "^5.3.0",
+    "lodash": "^4.17.21",
+    "numeral": "^2.0.6",
+    "prop-types": "^15.8.1",
+    "react-apexcharts": "^1.4.0",
+    "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.43.1",
+    "simplebar-react": "^3.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.19.1",
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.4",
+    "dayjs": "^1.11.7"
   },
   "scripts": {
     "start": "react-scripts start",
